# bmstu-cg-course-5sem

./: .gitignore  CMakeLists.txt  README.md
lib/glad/: CMakeLists.txt
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt
shaders/: bidir_pathtrace.fs  bidir_pathtrace.vs  debug.fs  frag_draw_tex.fs  ray_tracing.fs
src/: Project.cpp  Project.h  VideoExporter.h  main.cpp
src/application/: Application.cpp  Application.h
src/camera/: Camera.h  CameraController.cpp  CameraController.h
src/managers/: InputManager.cpp  InputManager.h
src/platform/OpenGL/: GLFramebuffer.cpp  GLFramebuffer.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLRenderDevice.cpp  GLRenderDevice.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  (+6 more)
src/render/: Framebuffer.h  IndexBuffer.h  RenderDevice.h  Shader.h  ShaderDataTypes.h  Texture.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
src/render_algorithm/: BPTAlgorithm.cpp  BPTAlgorithm.h  DebugAlgorithm.cpp  DebugAlgorithm.h  RayTracingAlgorithm.cpp  RayTracingAlgorithm.h  RenderAlgorithm.h  RenderAlgorithmVisitor.cpp  RenderAlgorithmVisitor.h
src/scene/: Scene.cpp  Scene.h  SceneObject.h  SceneObjectFactory.cpp  SceneObjectFactory.h  SceneObjectMenu.cpp  SceneObjectMenu.h
src/serialisation/: ProjectDeserializer.cpp  ProjectDeserializer.h  ProjectSerializer.cpp  ProjectSerializer.h  SerializedDataType.h
src/states/: AppStateMachine.cpp  AppStateMachine.h
src/ui/: UIAlgorithmProperties.cpp  UIAlgorithmProperties.h  UIAnimator.cpp  UIAnimator.h  UIComposite.cpp  UIComposite.h  UISceneEditor.cpp  UISceneEditor.h  UIWindow.h
(+13 files in other folders)
